--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+    <head>
+        <title>Test</title>
+    </head>
+    
+    <body>
+    <a href="games/asteroids.html">Asteroids</a>
+    </body>
+</html>
