--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     
     <body>
-    <a href="games/asteroids.html">Asteroids</a>
+    <a href="games/asteroids/asteroids.html">Asteroids</a>
     </body>
 </html>
