--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     
     <body>
-    <a href="games/asteroids/asteroids.html">Asteroids</a>
+    <a href="games/asteroids/asteroids.html">Asteroids</a> (From tutorial: <a href="http://www.zekechan.net/asteroids-html5-game-tutorial-1/">zekechan.net</a>)
     </body>
 </html>
